Fix CBSiteConfigurationIssuesView whitespace

--- a/handlers/handle,admin.css
+++ b/handlers/handle,admin.css
@@ -78,6 +78,7 @@ section.widget .version-number + .version-number {
 }
 
 .CBSiteConfigurationIssuesView h1 {
+    padding:    0 20px;
     text-align: center;
 }
 
